[package]
name = "telekey"
version = "0.1.0"
authors = ["Kirill Pimenov <kirushik@gmail.com>"]

[profile.dev]
codegen-units = 4

[profile.release]
lto = true

[dependencies]
telegram-bot = "0.4"

simple-signal = "1.0"

clap = {version = "2", features = ["yaml"]}

log = "*"
flexi_logger = "0.4"

yaml-rust = "*"

glob = "*"
